# audio_computing2025

./: CMakeLists.txt
Equalizer/: CMakeLists.txt
Equalizer/Include/: Equalizer.hpp  Equalizer_VE.hpp
Equalizer/src/: Equalizer.cpp  Equalizer_VE.cpp
src/: PluginProcessor.h
src/DSP/: Compressor_VE.cpp  Compressor_VE.hpp  DeEsser_VE.cpp  DeEsser_VE.hpp  Equalizer_VE.cpp  Equalizer_VE.hpp  Exciter_VE.cpp  Exciter_VE.hpp
